# kev_os_x86_64

./: Cargo.toml
.cargo/: config.toml
src/: interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/interrupts_old/: idt.rs  mod.rs
tests/: basic_boot.rs  should_panic.rs
