[package]
name = "kev_os"
version = "0.1.0"
edition = "2018"

# the profile used for `cargo build`
# [profile.dev]
# panic = "abort" # disable stack unwinding on panic

# # the profile used for `cargo build --release`
# [profile.release]
# panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33

[[test]]
name = "should_panic"
harness = false
